--- a/src/App.module.css
+++ b/src/App.module.css
@@ -7,10 +7,11 @@
 }
 
 .app__child {
-  width: 50vw;
-  height: 50vw;
+  width: calc(25vw + 20vh);
+  height: calc(25vw + 20vh);
   background-color: #ccc;
   border-radius: 10%;
+  transition: all 0.15s ease;
 }
 
 .app__child:hover {
